fixed spacing on desktop footer

--- a/client/src/scss/navbar.scss
+++ b/client/src/scss/navbar.scss
@@ -76,3 +76,11 @@ button#login-logout-btn {
         }
     }
 }
+
+.primary-light {
+    color: $primary-light;
+}
+
+.footer-link {
+    font-weight: 300;
+}
